# progra2Soluciones

./: .gitignore  1INF25-POO-Chuleta.md  README.md
Apertura de Archivos/: CMakeLists.txt  main.cpp
Apertura de Archivos/Biblioteca/: AperturaDeArchivos.cpp  AperturaDeArchivos.h
Lab01/Lab01_2025_1_20203361_Valentin_James/Parte1_CrearBiblioteca/: CMakeLists.txt  main.cpp
Lab01/Lab01_2025_1_20203361_Valentin_James/Parte2_UsarBiblioteca/: CMakeLists.txt
Lab01/Lab01_2025_1_20203361_Valentin_James/Parte2_UsarBiblioteca/funcionesSobrecargadas/: CadenaDeCaracteres .h  sobrecargaOp.cpp  sobrecargaOp.h
Lab01/Lab01_2025_1_20203361_Valentin_James/aParte1_CrearBiblioteca/: CMakeLists.txt  main.cpp
Lab01/Lab01_2025_1_20203361_Valentin_James/aParte1_CrearBiblioteca/funcionesAux/: CadenaDeCaracteres.h  operacionesSobrecargadas.cpp  operacionesSobrecargadas.h
Lab02/01Lab02_2024_1_20203361_Valentin_James/MetodoExactoDeMemoria-2024-1/: CMakeLists.txt  MetodoExactoDeMemoria.cpp  MetodoExactoDeMemoria.h  main.cpp
Lab03/01Lab04_2024_2_20203361_Valentin_James/lab04-2024-2/: CMakeLists.txt  cafeteria.cpp  cafeteria.h  main.cpp
Lab03/LAB_02_2025-2_CON_UNTERO_GENERICO/: CMakeLists.txt  funcionesAuxiliares.cpp  funcionesAuxiliares.h  main.cpp
Lab04/01Lab05_2024_2_20203361_Valentin_James/ListaGenerica/: BibliotecaGenerica.cpp  BibliotecaGenerica.h  CMakeLists.txt  ListaconEnteros.cpp  ListaconEnteros.h  ListaconRegistros.cpp  ListaconRegistros.h  enums.h  main.cpp
Lab04/2025-1_lab4_solucion/: BibliotecaEnteros.cpp  BibliotecaEnteros.h  BibliotecaGenerica.cpp  BibliotecaGenerica.h  BibliotecaRegistros.cpp  BibliotecaRegistros.h  CMakeLists.txt  main.cpp
Lab04/LAB_05_2024-2_SOLUCION/: BibliotecaGenerica.cpp  BibliotecaGenerica.h  CMakeLists.txt  ListaconEnteros.cpp  ListaconEnteros.h  ListaconRegistros.cpp  ListaconRegistros.h  enum.h  main.cpp
Lab05/01Lab08_2019_1_20203361_Valentin_James/anterior/: Alumno.cpp  Alumno.h  CMakeLists.txt  Curso.cpp  Curso.h  ListasDeClases.cpp  ListasDeClases.h  main.cpp
Lab05/01Lab08_2019_1_20203361_Valentin_James/nuevo/Pregunta01/: CMakeLists.txt  Curso.cpp  Curso.h
Lab05/Probando/: CMakeLists.txt  main.cpp  redSocial.cpp  redSocial.h  usuario.cpp  usuario.h
Lab05/probando/: CMakeLists.txt  main.cpp  prueba.cpp  prueba.h
Lab06/: 1INF25 POO Chuleta.md
Lab06/01Lab06_2025_1_20203361_Valentin_James/20203361_Laboratorio06_2025_1/: CMakeLists.txt  Empresa.cpp  Empresa.h  Infraccion.cpp  Infraccion.h  MinisterioDeTransporte.cpp  MinisterioDeTransporte.h  Multa.cpp  Multa.h
Lab06/01Lab06_2025_1_20203361_Valentin_James/asd/: CMakeLists.txt  Empresa.cpp  Empresa.h  Infraccion.cpp  Infraccion.h  Multa.cpp  Multa.h
Lab07/01Lab07_2025_1_20203361_Valentin_James/Archivos/__MACOSX/Datos/: ._Drones_Tacna.csv
Lab07/01Lab07_2025_1_20203361_Valentin_James/Proyecto/: CMakeLists.txt  main.cpp
Lab07/01Lab07_2025_1_20203361_Valentin_James/Proyecto/src/: CentralDeMonitoreo.cpp  CentralDeMonitoreo.h  Comunes.cpp  Comunes.h  Drone.cpp  Drone.h  DroneEstacionamiento.cpp  DroneEstacionamiento.h  DroneSemaforo.cpp  DroneSemaforo.h  DroneVelocidad.cpp  DroneVelocidad.h  Flota.cpp  Flota.h  Infraccion.cpp  Infraccion.h  MinisterioDeTransportes.cpp  MinisterioDeTransportes.h
Lab08/: informacionLabs.md
Lab08/00Aprendiendo/: CMakeLists.txt  main.cpp
Lab08/01Lab08_2025_1_20203361_Valentin_James/Proyecto/: CMakeLists.txt  main.cpp
Lab08/01Lab08_2025_1_20203361_Valentin_James/Proyecto/src/: Central.cpp  Central.h  Comunes.cpp  Comunes.h  Dron.cpp  Dron.h  DroneEstacionamiento.cpp  DroneEstacionamiento.h  DroneSemaforo.cpp  DroneSemaforo.h  DroneVelocidad.cpp  DroneVelocidad.h
Lab08/01Lab08_2025_1_20203361_Valentin_James/Proyecto/tad/: Arbol.cpp  Arbol.h  Nodo.cpp  Nodo.h
Lab08/02Lab08_2024_2_20203361_Valentin_James/Proyecto/: CMakeLists.txt  main.cpp
Lab08/02Lab08_2024_2_20203361_Valentin_James/Proyecto/src/: Bebida.cpp  Bebida.h  Comunes.cpp  Comunes.h  DetalleComanda.cpp  DetalleComanda.h  Entrada.cpp  Entrada.h  PlatoFondo.cpp  PlatoFondo.h  Producto.cpp  Producto.h  Restaurante.cpp  Restaurante.h
Lab08/02Lab08_2024_2_20203361_Valentin_James/Proyecto/tad/: Cola.cpp  Cola.h  Nodo.cpp  Nodo.h
Lab08/03Lab10_2022_1_20203361_Valentin_James/Proyecto/: CMakeLists.txt  main.cpp
Lab08/03Lab10_2022_1_20203361_Valentin_James/Proyecto/src/: Comunes.cpp  Comunes.h  Pedido.cpp  Pedido.h  PedidoEspecial.cpp  PedidoEspecial.h  PedidoEventual.cpp  PedidoEventual.h  PedidoUsual.cpp  PedidoUsual.h  Promociones.cpp  Promociones.h
Lab08/03Lab10_2022_1_20203361_Valentin_James/Proyecto/tad/: Lista.cpp  Lista.h  Nodo.cpp  Nodo.h
Lab09/01Lab09_2025_1_20203361_Valentin_James/Proyecto/: CMakeLists.txt  main.cpp
Lab09/01Lab09_2025_1_20203361_Valentin_James/Proyecto/src/: Empresa.cpp  Empresa.h  Infraccion.cpp  Infraccion.h  MinisterioDeTransporte.cpp  MinisterioDeTransporte.h  Multa.cpp  Multa.h  Utils.cpp  Utils.h  Vehiculo.cpp  Vehiculo.h
Lab09/04Lab09_2023_2_20203361_Valentin_James/Proyecto/: CMakeLists.txt  main.cpp
Lab09/04Lab09_2023_2_20203361_Valentin_James/Proyecto/src/: Camion.cpp  Camion.h  Flota.cpp  Flota.h  Furgon.cpp  Furgon.h  NPedido.cpp  NPedido.h  NVehiculo.cpp  NVehiculo.h  Utils.cpp  Utils.h  Vehiculo.cpp  Vehiculo.h
Lab10/: Recomendaciones.md  crear.py
Lab10/00Aprendiendo/Aprendiendo/nbproject/: build-impl.xml  genfiles.properties  project.properties
Lab10/00Aprendiendo/Aprendiendo/src/: Alumno.java  Principal.java  TipoAlumno.java
Lab10/01Lab10_2025_1_20203361_Valentin_James/Proyecto/Lab10_25_1/: build.xml
Lab10/01Lab10_2025_1_20203361_Valentin_James/Proyecto/Lab10_25_1/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Lab10/01Lab10_2025_1_20203361_Valentin_James/Proyecto/Lab10_25_1/src/: AutoridadTransporte.java  Captura.java  Carril.java  (+9 more)
Lab10/02Lab10_2024_2_20203361_Valentin_James/Proyecto/Lab10_24_2/: build.xml
Nueva carpeta/: CMakeLists.txt  funcionesAux.cpp  funcionesAux.h  main.cpp
(+9 files in other folders)
