cmake_minimum_required(VERSION 4.0)
project(2025_1_lab4_solucion)

set(CMAKE_CXX_STANDARD 20)

add_executable(2025_1_lab4_solucion main.cpp
        BibliotecaGenerica.h
        BibliotecaGenerica.cpp
        BibliotecaRegistros.h
        BibliotecaRegistros.cpp
        BibliotecaEnteros.h
        BibliotecaEnteros.cpp)
