cmake_minimum_required(VERSION 4.0)
project(LAB_05_2024_2_SOLUCION)

set(CMAKE_CXX_STANDARD 20)

add_executable(LAB_05_2024_2_SOLUCION main.cpp
        BibliotecaGenerica.h
        BibliotecaGenerica.cpp
        ListaconEnteros.h
        ListaconEnteros.cpp
        ListaconRegistros.h
        ListaconRegistros.cpp
        enum.h)
