cmake_minimum_required(VERSION 4.0)
project(20203361_VALENTIN_JAMES_Laboratorio08_2019_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(20203361_VALENTIN_JAMES_Laboratorio08_2019_1 main.cpp
        Curso.cpp
        Curso.h
        Alumno.cpp
        Alumno.h
        ListasDeClases.cpp
        ListasDeClases.h
)
