cmake_minimum_required(VERSION 4.0)
project(20203361_Laboratorio06_2025_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(20203361_Laboratorio06_2025_1 main.cpp
        Infraccion.cpp
        Infraccion.h
        Multa.cpp
        Multa.h
        Empresa.cpp
        Empresa.h
        MinisterioDeTransporte.cpp
        MinisterioDeTransporte.h)
