cmake_minimum_required(VERSION 4.0)
project(20203361_VALENTIN_JAMES_Laboratorio06_2025_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(20203361_VALENTIN_JAMES_Laboratorio06_2025_1 main.cpp
        Infraccion.cpp
        Infraccion.h
        Empresa.cpp
        Empresa.h
        Multa.cpp
        Multa.h
)
